--- a/webpages/index.html
+++ b/webpages/index.html
@@ -16,7 +16,7 @@
         <a id="logo-container" href="#"></a>
 
         <div id="header-wrapper">
-            <a href="#services">Services</a>
+            <a href="#features">Services</a>
             <a href="#about">About Us</a>
             <a href="#contact">Contact Us</a>
         </div>
