--- a/webpages/register.html
+++ b/webpages/register.html
@@ -18,7 +18,7 @@
             <input type="password" id="password" name="password" placeholder="Password" required>
             <p id="pw-info" class="hidden"></p>
             <input type="password" id="confirmpassword" name="confirmpassword" placeholder="Confirm Password" required>
-            <p id="confirm-info" class="hidden">Passwords do not match</p>
+            <p id="confirm-info" class="hidden"></p>
             <input type="submit" class="submit-form" value="Sign Up">
         </form>
         <a id="login-link" class="access-info" href="./login.html">Already have an account?</a>
