Disable sign up button and update password validation logic

--- a/webpages/register.html
+++ b/webpages/register.html
@@ -19,7 +19,7 @@
             <p id="pw-info" class="hidden"></p>
             <input type="password" id="confirmpassword" name="confirmpassword" placeholder="Confirm Password" required>
             <p id="confirm-info" class="hidden"></p>
-            <input type="submit" class="submit-form" value="Sign Up">
+            <input type="submit" class="submit-form" value="Sign Up" disabled>
         </form>
         <a id="login-link" class="access-info" href="./login.html">Already have an account?</a>
     </div>
