Update login form submit button style

--- a/webpages/login.html
+++ b/webpages/login.html
@@ -17,7 +17,7 @@
         <form action="log_form.php?=1" method="POST" id="loginform">
             <input type="email" id="email" name="email"  placeholder="Email"  required/>
             <input type="password" id="password" name="password" placeholder="Password" required/>
-            <input type="submit" class="submit-form" value="Log In"/>
+            <input type="submit" class="submit-form" value="Log In" style="cursor:pointer; opacity:1"/>
         </form>
         <div class="info-container">
             <a id="forgot-pw" class="access-info">I forgot my password.</a>
