Update userView.html stylesheet link

--- a/webpages/userView.html
+++ b/webpages/userView.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script type="module" defer src="./src/static/userView.js?=1"></script>  
-<link rel="stylesheet" href="/webpages/src/css/userView.css">
+<link rel="stylesheet" href="./src/css/userView.css?=1">
 <title>Dashboard</title>
 </head>
 <body>
