Update username display in top navigation

--- a/webpages/userView.html
+++ b/webpages/userView.html
@@ -12,7 +12,7 @@
     <nav class="top-nav">
         <div class="logo"><?php echo htmlspecialchars($username); ?></div>
         <div class="menu-items">
-            <a href="#" class="btn">Username</a>
+            <a href="#" class="btn"><?php echo htmlspecialchars($username); ?></a>
             <a href="#" class="btn">Settings</a>
         </div>
     </nav>
