Refactor sidebar buttons in userView.css and userView.html

--- a/webpages/userView.html
+++ b/webpages/userView.html
@@ -18,11 +18,11 @@
     </nav>
     <div class="dashboard">
         <aside class="sidebar">
-            <section class="section deadlines">Deadlines</section>
-            <section class="section activities">Recent Activity</section>
-            <section class="section online">People Online</section>
-            <section class="section goals">Goals/Objectives</section>
-            <section class="section tasks">Tasks</section>
+            <div class="sidebar-buttons">Deadlines</div>
+            <div class="sidebar-buttons">Recent Activity</div>
+            <div class="sidebar-buttons">People Online</div>
+            <div class="sidebar-buttons">Goals/Objectives</div>
+            <div class="sidebar-buttons">Tasks</div>
         </aside>
         <main class="main-content">
             <button class="btn add-note">Add Sticky Note</button>
