close modal now works

--- a/webpages/scrumBoard.html
+++ b/webpages/scrumBoard.html
@@ -51,7 +51,7 @@
     <div class="overlay" id="add-task-modal">
         <div class="modal-content">
             <form class="add-tast-form" name="add_task">
-                <span class="close-modal">&times;</span>
+                <a href="#" class="close-modal">&times;</a>
 
                 <h2>Add Task</h2>
 
