--- a/webpages/scrumBoard.html
+++ b/webpages/scrumBoard.html
@@ -50,7 +50,7 @@
 
     <div class="overlay" id="add-task-modal">
         <div class="modal-content">
-            <form class="add-tast-form" name="add_task">
+            <form class="add-task-form" name="add_task">
                 <span class="close-modal">&times;</span>
 
                 <h2>Add Task</h2>
