fixed all inputs and added button

--- a/webpages/scrumBoard.html
+++ b/webpages/scrumBoard.html
@@ -56,10 +56,10 @@
                 <h2>Add Task</h2>
 
                 <input type="text" id="task" name="task" placeholder="Task">
-                <textarea id="description" name="description" placeholder="Description">
+                <textarea id="description" name="description" placeholder="Description"></textarea>
                 <input type="text" id="assignee" name="assignee" placeholder="Assignee">
                 <input type="text" id="deadline" name="deadline" placeholder="Deadline">
-                <input type="submit"  name="add_task" value="Add Task">
+                <input type="submit" id="add-task-btn" name="add_task" value="Add Task">
             </form>
         </div>
     </div>
