--- a/webpages/scrumBoard.html
+++ b/webpages/scrumBoard.html
@@ -9,8 +9,9 @@
     <!-- <script src="scrumBoard.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./src/static/handlebar.js"></script>
-    <script src="scrumBoard.js"></script>
-    <link rel="stylesheet" href="./src/css/scrumBoard.css?=2" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="./src/static/scrumBoard.js" defer></script>
+    <link rel="stylesheet" href="./src/css/scrumBoard.css?=2"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Scrum Board</title>
 </head>
 
@@ -26,31 +27,37 @@
         </header>
 
         <section id="dashboard" class="dashboard top-nav">
-            <div id="backlog" class="backlog"></div>
-            <div id="toDo" class="toDo"></div>
-            <div id="inProgress" class="inProgress"></div>
-            <div id="done" class="done"></div>
+            <div id="backlog" class="backlog column">
+                <p class="task" draggable="true">test task 1</p>
+                <p class="task" draggable="true">test task 2</p>
+                <p class="task" draggable="true">test task 3</p>
+            </div>
+            <div id="toDo" class="toDo column">
+                <p class="task" draggable="true">test task 4</p>
+            </div>
+            <div id="inProgress" class="inProgress column"></div>
+            <div id="done" class="done column"></div>
         </section>
 
-        <footer>
-            <ul class="controls">
-                <li data-tooltip="Drag task here to delete">
-                    <a href="#" class="remove" id="remove">
-                        <img src="./src/contents/imgs/trash-icon.png" alt="remove">
-                    </a>
-                </li>
-                <li data-tooltip="Add new task">
-                    <a href="#add-task-modal" class="add-task" id="add-task">
-                        <img src="./src/contents/imgs/add.png" alt="add">
-                    </a>
-                </li>
-            </ul>
-        </footer>
+    <footer>
+        <ul class="controls">
+            <li data-tooltip="Drag task here to delete">
+                <a href="#" class="remove" id="remove">
+                    <img src="./src/contents/imgs/trash-icon.png" alt="remove">
+                </a>
+            </li>
+            <li data-tooltip="Add new task">
+                <a href="#add-task-modal" class="add-task" id="add-task">
+                    <img src="./src/contents/imgs/add.png" alt="add">
+                </a>
+            </li>
+        </ul>
+    </footer>
     </div>
 
     <div class="overlay" id="add-task-modal">
         <div class="modal-content">
-            <form class="add-task-form" name="add_task">
+            <form id="add-task-form" class="add-task-form" name="add_task">
                 <a href="#" class="close-modal">&times;</a>
 
                 <h2>Add Task</h2>
@@ -59,7 +66,8 @@
                 <textarea id="description" name="description" placeholder="Description"></textarea>
                 <input type="text" id="assignee" name="assignee" placeholder="Assignee">
                 <input type="text" id="deadline" name="deadline" placeholder="Deadline">
-                <input type="submit" id="add-task-btn" name="add_task" value="Add Task">
+                <!-- <input type="submit" id="add-task-btn" name="add_task" value="Add Task"> -->
+                <button type="submit" id="add-task-btn">Add Task</button>
             </form>
         </div>
     </div>
