--- a/webpages/scrumBoard.html
+++ b/webpages/scrumBoard.html
@@ -66,8 +66,7 @@
                 <textarea id="description" name="description" placeholder="Description"></textarea>
                 <input type="text" id="assignee" name="assignee" placeholder="Assignee">
                 <input type="text" id="deadline" name="deadline" placeholder="Deadline">
-                <!-- <input type="submit" id="add-task-btn" name="add_task" value="Add Task"> -->
-                <button type="submit" id="add-task-btn">Add Task</button>
+                <input type="submit" id="add-task-btn" name="add_task" value="Add Task">
             </form>
         </div>
     </div>
