--- a/webpages/scrumBoard.html
+++ b/webpages/scrumBoard.html
@@ -9,7 +9,7 @@
     <!-- <script src="scrumBoard.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./src/static/handlebar.js"></script>
-    <script src="scrumBoard.js"></script>
+    <script src="./src/static/scrumBoard.js" defer></script>
     <link rel="stylesheet" href="./src/css/scrumBoard.css?=2" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Scrum Board</title>
 </head>
@@ -26,10 +26,16 @@
         </header>
 
         <section id="dashboard" class="dashboard top-nav">
-            <div id="backlog" class="backlog"></div>
-            <div id="toDo" class="toDo"></div>
-            <div id="inProgress" class="inProgress"></div>
-            <div id="done" class="done"></div>
+            <div id="backlog" class="backlog column">
+                <p class="task" draggable="true">test task 1</p>
+                <p class="task" draggable="true">test task 2</p>
+                <p class="task" draggable="true">test task 3</p>
+            </div>
+            <div id="toDo" class="toDo column">
+                <p class="task" draggable="true">test task 3</p>
+            </div>
+            <div id="inProgress" class="inProgress column"></div>
+            <div id="done" class="done column"></div>
         </section>
 
         <footer>
