Adding new task works

--- a/webpages/scrumBoard.html
+++ b/webpages/scrumBoard.html
@@ -56,7 +56,7 @@
 
     <div class="overlay" id="add-task-modal">
         <div class="modal-content">
-            <form class="add-task-form" name="add_task">
+            <form id="add-task-form" class="add-task-form" name="add_task">
                 <a href="#" class="close-modal">&times;</a>
 
                 <h2>Add Task</h2>
