Refactor scrum board layout and styles

--- a/webpages/scrumBoard.html
+++ b/webpages/scrumBoard.html
@@ -26,14 +26,8 @@
         </header>
 
         <section id="dashboard" class="dashboard top-nav">
-            <div id="backlog" class="backlog column">
-                <p class="task" draggable="true">test task 1</p>
-                <p class="task" draggable="true">test task 2</p>
-                <p class="task" draggable="true">test task 3</p>
-            </div>
-            <div id="toDo" class="toDo column">
-                <p class="task" draggable="true">test task 3</p>
-            </div>
+            <div id="backlog" class="backlog column"></div>
+            <div id="toDo" class="toDo column"></div>
             <div id="inProgress" class="inProgress column"></div>
             <div id="done" class="done column"></div>
         </section>
