design updates footer and logo

--- a/webpages/index.html
+++ b/webpages/index.html
@@ -15,7 +15,6 @@
   <body>
     <div id="header">
       <a id="logo-container" href="#"></a>
-
       <div id="header-wrapper">
         <a href="#features">Services</a>
         <a href="#about">About Us</a>
@@ -118,16 +117,19 @@
     <footer id="footer">
       <div class="social-icons">
         <a href="#" class="social-icon">
-          <i class="fab fa-facebook-f"></i>
+          <img src="./src/contents/imgs/facebook.png" alt="Facebook">
         </a>
         <a href="#" class="social-icon">
-          <i class="fab fa-linkedin-in"></i>
+          <img src="./src/contents/imgs/skype.png" alt="Skype">
         </a>
         <a href="#" class="social-icon">
-          <i class="fab fa-instagram"></i>
+          <img src="./src/contents/imgs/linkedin.png" alt="LinkedIn">
         </a>
         <a href="#" class="social-icon">
-          <i class="fab fa-twitter"></i>
+          <img src="./src/contents/imgs/instagram.png" alt="Instagram">
+        </a>
+        <a href="#" class="social-icon">
+          <img src="./src/contents/imgs/twitter.png" alt="Twitter">
         </a>
       </div>
       <a href="https://github.com/Discovery-Limited/documentation">Privacy Policy</a>
