--- a/webpages/userView.html
+++ b/webpages/userView.html
@@ -13,7 +13,7 @@
   <body>
     <div class="wrapper">
       <nav class="top-nav">
-      <img src="./src/contents/imgs/about-us.png" class="navbar-logo" alt="logo"/>
+      <img src="./src/contents/imgs/logo.png" class="navbar-logo" alt="logo"/>
       <ul class="navbar-list">
         <li><a href="#">Home</a></li>
         <li><a href="#">Community</a></li>
