--- a/webpages/index.html
+++ b/webpages/index.html
@@ -132,7 +132,7 @@
           <img src="./src/contents/imgs/twitter.png" alt="Twitter">
         </a>
       </div>
-      <a href="https://github.com/Discovery-Limited/documentation">Privacy Policy</a>
+      <a href="https://discovery-rtd.readthedocs.io/en/latest/">Privacy Policy</a>
       <a href="https://github.com/Discovery-Limited">Support Us</a>
       <p class="copyright">
         Copyright © 2024 Discovery Ltd. All rights reserved
