Fix form action URL in login.html and update userView.html profile name display

--- a/webpages/userView.html
+++ b/webpages/userView.html
@@ -23,7 +23,7 @@
       <div class="profile-dropdown">
         <div onclick="toggle()" class="profile-dropdown-btn">
           <div class="profile-img">   
-          </div><span>unknown<?php echo htmlspecialchars($username); ?><i class="fa-solid fa-angle-down"></i>
+          </div><span><?php echo htmlspecialchars($username); ?><i class="fa-solid fa-angle-down"></i>
           </span>
         </div>
 
@@ -44,7 +44,7 @@
         </div>
 
         <div class="profile-dropdown-list-item">
-            <a href="#">
+            <a href="index.html">
               <i class="fa-solid fa-arrow-right-from-bracket"></i>
               Log out
             </a>
