Fix class attribute duplication in scrumBoard.html and scrumBoard.js

--- a/webpages/scrumBoard.html
+++ b/webpages/scrumBoard.html
@@ -23,10 +23,10 @@
                 </ul>
             </header>
             <section id="dashboard" class="dashboard top-nav">
-                <div id="backlog" class="backlog column"></div>
-                <div id="toDo" class="toDo column"></div>
-                <div id="inProgress" class="inProgress column"></div>
-                <div id="done" class="done column"></div>
+                <div id="backlog" class="backlog column" class="drop"></div>
+                <div id="toDo" class="toDo column" class="drop"></div>
+                <div id="inProgress" class="inProgress column" class="drop"></div>
+                <div id="done" class="done column" class="drop"></div>
             </section>
             <footer>
                 <ul class="controls">
