--- a/webpages/login.html
+++ b/webpages/login.html
@@ -20,7 +20,7 @@
             <input type="submit" class="submit-form" value="Log In" style="cursor:pointer; opacity:1"/>
         </form>
         <div class="info-container">
-            <a id="forgot-pw" class="access-info">I forgot my password.</a>
+            <a id="forgot-pw" class="access-info">I forgot my password</a>
             <a id="register-link" class="access-info" href="./register.html">Sign Up Now!</a>
         </div>
     </div>
