--- a/webpages/register.html
+++ b/webpages/register.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./src/css/accessControl.css?=5">
-        <script src="./src/static/register.js"></script>
+        <script src="./src/static/register.js?=2"></script>
         <title>DS | Sign Up</title>
     </head>
     <body>
