--- a/webpages/scrumBoard.html
+++ b/webpages/scrumBoard.html
@@ -8,7 +8,8 @@
         <!-- <script src="scrumBoard.js"></script> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="./src/static/handlebar.js"></script>
-        <script src="./src/static/scrumBoard.js?=3" defer></script>
+        <script src="./src/static/scrumBoard.js?=4" defer></script>
+        <script src="./src/static/addTask.js?=1" defer></script>
         <link rel="stylesheet" href="./src/css/scrumBoard.css?=2" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Scrum Board</title>
     </head>
