projects front end done

--- a/webpages/userView.html
+++ b/webpages/userView.html
@@ -52,7 +52,8 @@
       <div class="dashboard">
         <aside class="sidebar">
           <div>
-            <div id="projects" class="sidebar-toggle">
+            <div id="projects" class="sidebar-toggle"
+            onclick="loadContent('./projects.html')">
               <p>Projects</p>
               <i class="fa-solid fa-sort-down"></i>
             </div>
@@ -61,7 +62,8 @@
             </ul>
           </div>
           <div>
-            <div id="deadlines" class="sidebar-toggle">
+            <div id="deadlines" class="sidebar-toggle"
+            onclick="loadContent('./scrumBoard.html')">
               <p>Project Deadlines</p>
             </div>
           </div>
