--- a/webpages/projects.html
+++ b/webpages/projects.html
@@ -13,23 +13,25 @@
     <body>
         <section>
             <ul>
-                <li>
-                    <div class="project">
-                        <p>Project Name</p>
-                        <div class="edit">
-                            <i class="fa-solid fa-ellipsis"></i>
-                            <div class="edit-dropdown">
-                                <i class="fa-solid fa-pen-to-square"></i>
-                                <i class="fa-solid fa-trash-can"></i>
-                            </div>
-                        </div>
-                        <div class="contributors">
-                            <i class="fa-solid fa-users-rectangle"></i>
-                            <p>0</p>
-                        </div>
-                    </div>
-                </li>
             </ul>
         </section>
+        <template id="project-template">
+            <li>
+                <div class="project">
+                    <p>Project Name</p>
+                    <div class="edit">
+                        <i class="fa-solid fa-ellipsis edit-btn"></i>
+                        <div class="edit-dropdown">
+                            <i class="fa-solid fa-pen-to-square"></i>
+                            <i class="fa-solid fa-trash-can"></i>
+                        </div>
+                    </div>
+                    <div class="contributors">
+                        <i class="fa-solid fa-users-rectangle"></i>
+                        <p>0</p>
+                    </div>
+                </div>
+            </li>
+        </template>                
     </body>
 </html>
