better phps and database issues fixed

--- a/webpages/register.html
+++ b/webpages/register.html
@@ -10,7 +10,7 @@
     <body>
         <div class="access-container">
             <h1 class="access-header">Sign Up</h1>
-            <form action="reg_form.php" method="POST" id="signupform">
+            <form action="register.php" method="POST" id="signupform">
                 <input
                     type="text"
                     id="username"
