--- a/webpages/userView.html
+++ b/webpages/userView.html
@@ -24,7 +24,7 @@
         <div class="profile-dropdown">
           <div class="profile-dropdown-btn">
               <div class="profile-img"></div>
-              <span><?php echo htmlspecialchars($username); ?><i class="fa-solid fa-angle-down"></i></span>
+              <span><php echo htmlspecialchars($username); ?><i class="fa-solid fa-angle-down"></i></span>
           </div>
           <ul class="profile-dropdown-list">
               <li class="profile-dropdown-list-item">
