--- a/webpages/login.html
+++ b/webpages/login.html
@@ -14,7 +14,7 @@
     <div class="access-container">
         <h1 class="access-header">Log In</h1>
 
-        <form action="log_form.php" method="POST" id="loginform">
+        <form action="login.php" method="POST" id="loginform">
             <input type="email" id="email" name="email"  placeholder="Email"  required/>
             <input type="password" id="password" name="password" placeholder="Password" required/>
             <input type="submit" class="submit-form" value="Log In"/>
