--- a/webpages/userView.html
+++ b/webpages/userView.html
@@ -7,8 +7,8 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"/>
-    <link rel="stylesheet" href="./src/css/userView.css" />
-    <script src="./src/static/userView.js"></script>
+    <link rel="stylesheet" href="./src/css/userView.css?v=2" />
+    <script src="./src/static/userView.js?v=2"></script>
     <title>Dashboard</title>
   </head>
   <body>
@@ -58,7 +58,12 @@
               <i class="fa-solid fa-sort-down"></i>
             </div>
             <ul class="sidebar-dropdown-list">
-              <li><a href="#"><i class="fa-solid fa-circle-plus"></i>Create new project</a></li>
+              <li>
+                <a id="create-project">
+                  <i class="fa-solid fa-circle-plus"></i>
+                  Create new project
+                </a>
+              </li>
             </ul>
           </div>
           <div>
@@ -74,6 +79,17 @@
         </aside>
         <main class="main-content">
           <iframe id="contentFrame"class="content-frame"src=""frameborder="0"></iframe>
+          <form id="project-form" action="projects.php" method="post">
+            <label for="projectName">Project Name:</label>
+            <input type="text" id="projectName" name="project_name" required><br><br>
+
+            <label for="emailInput">Add User Emails:</label>
+            <div id="emailList"></div>
+            <input type="text" id="emailInput" placeholder="Enter email and press Enter">
+            <input type="hidden" name="emails" id="hiddenEmails">
+
+            <button type="submit">Create Project</button>
+        </form>
         </main>
       </div>
     </div>
