--- a/webpages/userView.html
+++ b/webpages/userView.html
@@ -82,7 +82,7 @@
         </aside>
         <main class="main-content">
           <iframe id="contentFrame"class="content-frame"src=""frameborder="0"></iframe>
-          <form id="project-form" action="projects.php" method="post">
+          <form id="project-form" action="project_storage.php" method="post">
             <a href="#" class="close-popup">&times;</a>
             <h2>Create Project</h2>
             <label for="projectName">Project Name:</label>
