--- a/webpages/index.html
+++ b/webpages/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./src/css/index.css?=5" />
+    <link rel="stylesheet" href="./src/css/main.css" />
     <script type="module" defer src="./src/static/index.js?=1"></script>
     <script
       src="https://kit.fontawesome.com/13e3511e22.js"
@@ -13,73 +13,60 @@
   </head>
 
   <body>
-    <div id="header">
-      <a id="logo-container" href="#"></a>
-      <div id="header-wrapper">
-        <a href="#features">Services</a>
-        <a href="#about">About Us</a>
-        <a href="#contact">Contact Us</a>
-      </div>
-
-      <div id="button-wrapper">
-        <a href="./login.html"><button id="log-in">Log In</button></a>
-        <a href="./register.html"><button id="sign-up">Sign Up</button></a>
-      </div>
+    <header>
+      <nav class="inter">
+        <div class="logo">
+          <p>discoveria&trade;</p>
+        </div>
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#features">Services</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+        <div class="account-ops">
+          <div class="button login">Sign In</div>
+          <div class="button register">
+            Get Started <i class="fa-solid fa-chevron-right"></i>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <div class="hero-section inter">
+      <div class="grid-background"></div>
+      <div class="overlay"></div>
+      <h1>
+        Redefining Teamwork <br />
+        for Enhanced Productivity
+      </h1>
+      <p>
+        Ready to supercharge your team's productivity? Join us now and see how
+        easy work can be.
+      </p>
+      <button class="cta-button">
+        Get Started <i class="fa-solid fa-chevron-right"></i>
+      </button>
+      <button class="demo-button">
+        Documentation<i class="fa-solid fa-chevron-right"></i>
+      </button>
     </div>
-
-    <section id="intro">
-      <div class="darken-background"></div>
-      <div id="company-name">
-        <span>D</span>
-        <span>I</span>
-        <span>S</span>
-        <span>C</span>
-        <span>O</span>
-        <span>V</span>
-        <span>E</span>
-        <span>R</span>
-        <span>I</span>
-        <span>A</span>
-      </div>
-    </section>
-
-    <section id="features">
-      <h1>WE OFFER</h1>
-      <div class="features-container">
-        <div class="task-management">
-          <i class="fa-solid fa-list-check"></i>
-          <div class="features-wrapper">
-            <h2>Task Manager</h2>
-            <p>Build and manage teams in your workspace.</p>
-          </div>
-        </div>
-
-        <div class="deadline-tracker">
-          <i class="fa-solid fa-calendar-days"></i>
-          <div class="features-wrapper">
-            <h2>Deadline Tracker</h2>
-            <p>Keep track of your project deadlines.</p>
-          </div>
-        </div>
-
-        <div class="file-sharing">
-          <i class="fa-solid fa-file-zipper"></i>
-          <div class="features-wrapper">
-            <h2>File Sharing</h2>
-            <p>Share files with your team members.</p>
-          </div>
-        </div>
-      </div>
-    </section>
+    <div class="product-showcase">
+      <img
+        src="/screencapture-discoveria-online-user-view-php-2024-05-02-00_32_51.png"
+        alt=""
+        class="product"
+      />
+    </div>
 
     <section id="about">
       <div class="about-container">
-        <div class="about-image">
-          <img src="./src/contents/imgs/about-us.png" alt="About Us Image" />
-        </div>
-
-        <div class="about-text">
-          <h1>About Us</h1>
+        <div class="about-text inter">
+          <h2>About Us</h2>
+          <p>
+            Our platform simplifies teamwork and boosts productivity. With
+            intuitive tools for project management and seamless communication,
+            we're here to help your team thrive. Join us today and revolutionize
+            the way you work together!
+          </p>
           <p>
             Our platform simplifies teamwork and boosts productivity. With
             intuitive tools for project management and seamless communication,
@@ -89,54 +76,159 @@
           <a href="#contact">Contact Us</a>
         </div>
       </div>
-    </section>
-
-    <section id="contact">
-      <div id="contact-heading">Get in Touch Now!</div>
-
-      <div id="contact-container">
-        <div id="contact-form">
-          <input type="text" name="name" id="name-input" placeholder="Name" />
-          <input
-            type="email"
-            name="email"
-            id="email-input"
-            placeholder="Email"
-          />
-        </div>
-
-        <textarea
-          name="message"
-          id="message-input"
-          placeholder="Message"
-        ></textarea>
-        <button type="submit" id="submit-button">Send Message</button>
+      <div class="about-img">
+        <img src="/Team work-amico.svg" alt="" />
       </div>
     </section>
 
-    <footer id="footer">
+    <section id="features">
+      <h2 class="inter">We Offer</h2>
+      <div class="features-container inter">
+        <div class="grid">
+          <div class="grid-item">
+            <img src="Business Plan-amico.svg" alt="" />
+
+            <div class="grid-text">
+              <h3>Transparent Business</h3>
+              <ul>
+                <li>
+                  <p>
+                    Transparent display of user activity logs within the
+                    workspace application.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    Detailed audit trails that provide a chronological record of
+                    changes.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    Granular control over user permissions and access levels.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    Implementation of end-to-end encryption to protect sensitive
+                    data transmitted and stored within the workspace
+                    application.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    Secure user authentication mechanisms, such as multi-factor
+                    authentication (MFA) or single sign-on (SSO)
+                  </p>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="grid-item">
+            <img src="Memory storage-bro.svg" alt="" />
+
+            <div class="grid-text">
+              <h3>100 Gigabyte Storage</h3>
+              <p>Using our platform, you'll get 100 Gigabytes of storage.</p>
+            </div>
+          </div>
+
+          <div class="grid-item">
+            <img src="File searching-amico.svg" alt="" />
+
+            <div class="grid-text">
+              <h3>File Sharing</h3>
+              <p>Share files with your team members.</p>
+            </div>
+          </div>
+
+          <div class="grid-item">
+            <img src="Task-bro.svg" alt="" />
+
+            <div class="grid-text">
+              <h3>Task Manager</h3>
+              <p>Build and manage teams in your workspace.</p>
+            </div>
+          </div>
+
+          <div class="grid-item">
+            <img src="Deadline-rafiki.svg" alt="" />
+
+            <div class="grid-text">
+              <h3>Deadline Tracker</h3>
+              <p>Keep track of your project deadlines.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact" class="inter">
+      <div id="contact-heading">Get in Touch Now!</div>
+      <div class="contact-section">
+        <img src="/Settings-rafiki.svg" alt="" />
+        <div id="contact-container">
+          <form id="contact-form">
+            <input type="text" name="name" id="name-input" placeholder="Name" />
+            <input
+              type="email"
+              name="email"
+              id="email-input"
+              placeholder="Email"
+            />
+            <textarea
+              name="message"
+              id="message-input"
+              placeholder="Message"
+            ></textarea>
+            <button type="submit" id="submit-button">Send Message</button>
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <footer id="footer" class="inter">
       <div class="social-icons">
         <a href="#" class="social-icon">
-          <img src="./src/contents/imgs/facebook.png" alt="Facebook">
+          <img src="./src/contents/imgs/facebook.png" alt="Facebook" />
         </a>
         <a href="#" class="social-icon">
-          <img src="./src/contents/imgs/skype.png" alt="Skype">
+          <img src="./src/contents/imgs/skype.png" alt="Skype" />
         </a>
         <a href="#" class="social-icon">
-          <img src="./src/contents/imgs/linkedin.png" alt="LinkedIn">
+          <img src="./src/contents/imgs/linkedin.png" alt="LinkedIn" />
         </a>
         <a href="#" class="social-icon">
-          <img src="./src/contents/imgs/instagram.png" alt="Instagram">
+          <img src="./src/contents/imgs/instagram.png" alt="Instagram" />
         </a>
         <a href="#" class="social-icon">
-          <img src="./src/contents/imgs/twitter.png" alt="Twitter">
+          <img src="./src/contents/imgs/twitter.png" alt="Twitter" />
         </a>
       </div>
-      <a href="https://discovery-rtd.readthedocs.io/en/latest/">Privacy Policy</a>
-      <a href="https://github.com/Discovery-Limited">Support Us</a>
+      <div class="inter">
+        <a href="https://discovery-rtd.readthedocs.io/en/latest/"
+          >Privacy Policy</a
+        >
+        <a href="https://github.com/Discovery-Limited">Support Us</a>
+      </div>
       <p class="copyright">
         Copyright © 2024 Discoveria Ltd. All rights reserved
       </p>
     </footer>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const ctaButton = document.querySelector(".cta-button");
+
+        ctaButton.addEventListener("mouseenter", function () {
+          ctaButton.classList.add("shine-animation");
+        });
+
+        ctaButton.addEventListener("animationend", function () {
+          ctaButton.classList.remove("shine-animation");
+        });
+      });
+    </script>
   </body>
 </html>
